[project]
name = "bedrock-rag-mcp"
version = "0.1.0"
description = "MCP server for Bedrock RAG using retrieve_and_generate API"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "boto3>=1.35.0",
    "bedrock_agentcore_starter_toolkit",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
